--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.scss
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.scss
@@ -42,24 +42,6 @@
     font-size: 13px;
     margin: 0 10px;
 }
-.input-img-calendar {
-    top: 10px;
-    right: 15px;
-    position: absolute;
-}
-::ng-deep .date-picker  input {
-    display: block !important;
-    width: 100% !important;
-    height: calc(2.25rem + 2px) !important;
-    padding: .375rem .75rem !important;
-    font-size: 1rem !important;
-    line-height: 1.5 !important;
-    color: #495057 !important;
-    background-color: #fff !important;
-    background-clip: padding-box !important;
-    border: 1px solid #ced4da !important;
-    border-radius: .25rem !important;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
-    outline: 0;
-    z-index: 10000 !important;
+.invalid{
+    color: red;
 }
