--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -21,9 +21,9 @@
         </div>
       </div>
       <div class="form-group">
-        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorContractName!=''">
+        <div class="invalid" *ngIf="errorContractName!=''">
           {{errorContractName | translate}}
-        </p>
+        </div>
       </div>
     </div>
   </div>
@@ -40,9 +40,9 @@
         </div>
       </div>
       <div class="form-group">
-        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorContractFile!=''">
+        <div class="invalid" *ngIf="errorContractFile!=''">
           {{errorContractFile | translate}}
-        </p>
+        </div>
       </div>
     </div>
   </div>
@@ -134,9 +134,9 @@
         </div>
       </div>
       <div class="form-group">
-        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorSignTime!=''">
+        <div class="invalid" *ngIf="errorSignTime!=''">
           {{errorSignTime}}
-        </p>
+        </div>
       </div> 
     </div>
   </div>
