edit html step 2

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -23,10 +23,10 @@
                   <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name" autofocus>
                 </div>
               </div>
-              <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">
-                <input type="checkbox">
-                <span class="label text-color">OTP</span>
-              </div>
+<!--              <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
+<!--                <input type="checkbox">-->
+<!--                <span class="label text-color">OTP</span>-->
+<!--              </div>-->
               <div class="participants__name">
                 <div class="label text-color">Email: <span class="required-title">*</span></div>
                 <div class="input-data">
@@ -59,10 +59,10 @@
                            [(ngModel)]="d.name">
                   </div>
                 </div>
-                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">
-                  <input type="checkbox">
-                  <span class="label text-color">OTP</span>
-                </div>
+<!--                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
+<!--                  <input type="checkbox">-->
+<!--                  <span class="label text-color">OTP</span>-->
+<!--                </div>-->
                 <div class="participants__name">
                   <div class="label text-color">Email: <span class="required-title">*</span></div>
                   <div class="input-data">
@@ -73,7 +73,8 @@
               </div>
 
               <div class="participants--input select-text-input" style="display: flex">
-                <div class="participants__name" [ngStyle]="getStyleSignature(d)">
+<!--                [ngStyle]="getStyleSignature(d)"-->
+                <div class="participants__name" style="width: 90%">
                   <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
                   <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                            [settings]="dropdownSignTypeSettings" [data]="signTypeList"
@@ -90,14 +91,14 @@
                   </ng-multiselect-dropdown>
                   <div class="required-title notify">{{'note_chon_loai_ki_so' | translate}}</div>
                 </div>
-                <div *ngIf="getOtp(d)" class="participants-otp">
-                  <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">
-                  <span class="label text-color">OTP</span>
-                </div>
-                <div *ngIf="getOtp(d)" class="participants__name">
-                  <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>
-                  <input id="focus_phone_{{d.role}}" type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
-                </div>
+<!--                <div *ngIf="getOtp(d)" class="participants-otp">-->
+<!--                  <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">-->
+<!--                  <span class="label text-color">OTP</span>-->
+<!--                </div>-->
+<!--                <div *ngIf="getOtp(d)" class="participants__name">-->
+<!--                  <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>-->
+<!--                  <input id="focus_phone_{{d.role}}" type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">-->
+<!--                </div>-->
               </div>
             </div>
             <div *ngIf="getOriganzationSignature().length > 1" class="col-md-1 delete-element" (click)="deleteOriganzationSignature(index)">
@@ -124,10 +125,10 @@
                     <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
                   </div>
                 </div>
-                <div class="participants-otp" style="z-index: -1">
-                  <input type="checkbox">
-                  <span class="label text-color">OTP</span>
-                </div>
+<!--                <div class="participants-otp" style="z-index: -1">-->
+<!--                  <input type="checkbox">-->
+<!--                  <span class="label text-color">OTP</span>-->
+<!--                </div>-->
                 <div class="participants__name">
                   <div class="label text-color">Email: <span class="required-title">*</span></div>
                   <div class="input-data">
@@ -138,7 +139,7 @@
               </div>
 
               <div class="participants-information">
-                <div class="participants-signature-type">
+                <div class="participants-signature-type" style="width: 90%">
                   <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
                   <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                            [settings]="dropdownSignTypeSettings" [data]="signTypeList" (ngModelChange)="selectWithOtp($event, d)">
@@ -212,10 +213,10 @@
                     <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
                   </div>
                 </div>
-                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">
-                  <input type="checkbox">
-                  <span class="label text-color">OTP</span>
-                </div>
+<!--                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
+<!--                  <input type="checkbox">-->
+<!--                  <span class="label text-color">OTP</span>-->
+<!--                </div>-->
                 <div class="participants__name">
                   <div class="label text-color">Email: <span class="required-title">*</span></div>
                   <div class="input-data">
@@ -247,10 +248,10 @@
                     <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
                   </div>
                 </div>
-                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">
-                  <input type="checkbox">
-                  <span class="label text-color">OTP</span>
-                </div>
+<!--                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
+<!--                  <input type="checkbox">-->
+<!--                  <span class="label text-color">OTP</span>-->
+<!--                </div>-->
                 <div class="participants__name">
                   <div class="label text-color">Email: <span class="required-title">*</span></div>
                   <div class="input-data">
@@ -284,10 +285,10 @@
                              [(ngModel)]="d.name">
                     </div>
                   </div>
-                  <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">
-                    <input type="checkbox">
-                    <span class="label text-color">OTP</span>
-                  </div>
+<!--                  <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
+<!--                    <input type="checkbox">-->
+<!--                    <span class="label text-color">OTP</span>-->
+<!--                  </div>-->
                   <div class="participants__name">
                     <div class="label text-color">Email: <span class="required-title">*</span></div>
                     <div class="input-data">
@@ -297,7 +298,8 @@
                   </div>
                 </div>
                 <div class="participants--input select-text-input" style="display: flex">
-                  <div class="participants__name" [ngStyle]="getStyleSignature(d)">
+<!--                  [ngStyle]="getStyleSignature(d)"-->
+                  <div class="participants__name" style="width: 90%">
                     <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
 
                     <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
@@ -314,14 +316,14 @@
                     </ng-multiselect-dropdown>
                     <div class="required-title notify">{{'note_chon_loai_ki_so' | translate}}</div>
                   </div>
-                  <div  *ngIf="getOtp(d)" class="participants-otp">
-                    <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">
-                    <span class="label text-color">OTP</span>
-                  </div>
-                  <div *ngIf="getOtp(d)" class="participants__name">
-                    <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>
-                    <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
-                  </div>
+<!--                  <div  *ngIf="getOtp(d)" class="participants-otp">-->
+<!--                    <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">-->
+<!--                    <span class="label text-color">OTP</span>-->
+<!--                  </div>-->
+<!--                  <div *ngIf="getOtp(d)" class="participants__name">-->
+<!--                    <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>-->
+<!--                    <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">-->
+<!--                  </div>-->
                 </div>
               </div>
               <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
@@ -349,10 +351,10 @@
                       <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
                     </div>
                   </div>
-                  <div class="participants-otp" style="z-index: -1">
-                    <input type="checkbox">
-                    <span class="label text-color">OTP</span>
-                  </div>
+<!--                  <div class="participants-otp" style="z-index: -1">-->
+<!--                    <input type="checkbox">-->
+<!--                    <span class="label text-color">OTP</span>-->
+<!--                  </div>-->
                   <div class="participants__name">
                     <div class="label text-color">Email: <span class="required-title">*</span></div>
                     <div class="input-data">
@@ -363,7 +365,7 @@
                 </div>
 
                 <div class="participants-information">
-                  <div class="participants-signature-type">
+                  <div class="participants-signature-type" style="width: 90%">
                     <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
                     <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}" [settings]="dropdownSignTypeSettings" [data]="signTypeList" (ngModelChange)="selectWithOtp($event, d)">
                       <ng-template #optionsTemplate let-item let-option="option"
@@ -408,10 +410,10 @@
                                [(ngModel)]="d.name" (change)="getName($event, item)">
                       </div>
                     </div>
-                    <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">
-                      <input type="checkbox">
-                      <span class="label text-color">OTP</span>
-                    </div>
+<!--                    <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
+<!--                      <input type="checkbox">-->
+<!--                      <span class="label text-color">OTP</span>-->
+<!--                    </div>-->
                     <div class="participants__name">
                       <div class="label text-color">Email: <span class="required-title">*</span></div>
                       <div class="input-data">
@@ -421,7 +423,8 @@
                     </div>
                   </div>
                   <div class="participants--input select-text-input" style="display: flex">
-                    <div class="participants__name" [ngStyle]="getStyleSignature(d)">
+<!--                    [ngStyle]="getStyleSignature(d)"-->
+                    <div class="participants__name" style="width: 90%">
                       <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
                       <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
                                                [settings]="dropdownSignTypeSettings" [data]="signTypeList" (ngModelChange)="selectWithOtp($event, d)">
@@ -437,14 +440,14 @@
                       </ng-multiselect-dropdown>
                       <div class="required-title notify">{{'note_chon_loai_ki_so' | translate}}</div>
                     </div>
-                    <div *ngIf="getOtp(d)" class="participants-otp">
-                      <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">
-                      <span class="label text-color">OTP</span>
-                    </div>
-                    <div *ngIf="getOtp(d)" class="participants__name">
-                      <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>
-                      <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">
-                    </div>
+<!--                    <div *ngIf="getOtp(d)" class="participants-otp">-->
+<!--                      <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">-->
+<!--                      <span class="label text-color">OTP</span>-->
+<!--                    </div>-->
+<!--                    <div *ngIf="getOtp(d)" class="participants__name">-->
+<!--                      <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>-->
+<!--                      <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">-->
+<!--                    </div>-->
                   </div>
                 </div>
                 <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
