--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -1,1 +1,136 @@
-<p>detail-user works!</p>
+<div class="label-header">{{'user.information.individual' | translate}}</div>
+<div class="content">
+   <div class="content-body">
+     <div class="row">
+       <div class="col-md-4">
+            <div class="label text-color">{{'user.name' | translate}} <span class="required-title">*</span></div>
+            <div>
+                <div [innerHTML]="name" class="input_text"></div>
+            </div>
+       </div>
+       <div class="col-md-4">
+            <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
+            <div>
+                <div [innerHTML]="name" class="input_text"></div>
+            </div>
+       </div>
+       <div class="col-md-4">
+        <div class="label text-color">{{'user.birthday' | translate}}</div>
+        <div>
+            <div [innerHTML]="name" class="input_text"></div>
+        </div>
+       </div>
+     </div>
+   
+     <div class="row">
+       <div class="col-md-4">
+          <div class="label text-color">{{'user.phone' | translate}} <span class="required-title">*</span></div>
+          <div>
+            <div [innerHTML]="name" class="input_text"></div>
+        </div>
+       </div>
+       <div class="col-md-4">
+         <div class="label text-color">{{'organization' | translate}} <span class="required-title">*</span></div>
+         <div>
+            <div [innerHTML]="name" class="input_text"></div>
+        </div>
+       </div>
+       <div class="col-md-4">
+        <div class="label text-color">Vai trò <span class="required-title">*</span></div>
+        <div>
+            <div [innerHTML]="name" class="input_text"></div>
+        </div>
+      </div>
+     </div>
+     <div class="row">
+        <div class="col-md-6" style="align-self: center;">
+            <input type="radio" checked style="outline: none;">
+            <span> {{status==1?'Hoạt động':'Không hoạt động'}}</span>
+        </div>
+  </div>
+   </div>
+   
+   <br>
+   <!-- <div class="label-header">{{'sign.information' | translate}}</div>
+   <div class="content-body">
+     <div class="row">
+       <div class="col-md-4">
+         <div class="label-header">
+           {{'sign.file-image' | translate}}
+         </div>
+        <div class="content-body">
+           <div [hidden]="imgSignPCSelect">
+            <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpge"
+            (change)="fileChangedAttach($event)" style="display: none;"/>
+            <div class="select-contract container-img-file" (click)="addFileAttach()">
+              <div class="upload-image-region d-flex flex-column container-img-file-1">
+                <img src="assets/img/img-icon.svg" alt="#" width="50px">
+                <div class="text-choose-file">{{'choose.sign.file.image' | translate}}</div>
+                <div class="text-support-extension">{{'support.format.PNG.JPG.JPGE' | translate}}</div>
+              </div>
+            </div>
+          </div>
+          <div class="image-div">
+            <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
+            <img class="hidden_img" (click)="addFileAttach()" src="assets/img/img-icon.svg" width="30" height="30" />
+          </div>
+        </div>
+       </div>
+   
+       <div class="col-md-4">
+         <div class="label-header">
+           {{'sign.kpi' | translate}}
+         </div>
+         <div class="content-body">
+           <div class="row">
+             <div class="col-md-12">
+               <div>{{'user.phone' | translate}}</div>
+               <div class="input-data">
+                  <input type="text" formControlName="phoneKpi">
+               </div>
+             </div>
+           </div>
+           <div class="row">
+             <div class="col-md-12">
+               <div>{{'user.network' | translate}}</div>
+               <div>
+                <p-dropdown 
+                  panelStyleClass="font"
+                  [options]="orgList" 
+                  formControlName="networkKpi" 
+                  optionLabel="name" 
+                  optionValue="id" 
+                  placeholder="Chọn nhà mạng" 
+                  [filter]="true" 
+                  filterBy="name" 
+                  [showClear]="true"  
+                  ></p-dropdown>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+   
+       <div class="col-md-4">
+         <div class="label-header">
+           {{'sign.hsm' | translate}}
+         </div>
+         <div class="content-body">
+           <div class="row">
+             <div class="col-md-12">
+               <div>{{'user.name.v2' | translate}}</div>
+               <div class="input-data">
+                <input type="text" formControlName="nameHsm">
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div> -->
+
+   <div class="row" style="justify-content: center;padding-top: 10px;">
+    <button class="cancel-button"  type="button">Hủy</button>
+</div>
+</div>
+   
