--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -1,60 +1,52 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3">
-      <div>Họ tên</div>
+      <div>Tổ chức</div>
       <div class="input-line">
-          <input type="text" [(ngModel)]="name" class="input_text"/>
+        <input type="text" [(ngModel)]="organization_id" class="input_text"/>
       </div>
     </div>
     <div class="col-md-3">
       <div>Email</div>
       <div class="input-line">
-          <input type="text" [(ngModel)]="email" class="input_text"/>
+        <input type="text" [(ngModel)]="email" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3">
-      <div>Số điện thoại</div>
-      <div class="input-line">
-          <input type="text" [(ngModel)]="phone" class="input_text"/>
-      </div>
-    </div>
-    <div class="col-md-3 btn_search">
-      <button class="btn btn-lg btn-block btn_submit">{{'btn.search' | translate }}</button>
-      <button class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
+    <div class="col-md-6 btn_search">
+      <button class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'btn.add' | translate }}</button>
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
-    <p-treeTable [value]="files"  [paginator]="true" [rows]="5" id="table">
+    <p-table [value]="list" [paginator]="true" [rows]="10" id="table">
       <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th *ngFor="let col of cols" [ttSortableColumn]="col.field">
-        {{col.header}}
-        <p-treeTableSortIcon [field]="col.field"></p-treeTableSortIcon>
-        </th>
-      </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
-        <!-- <tr>
-          <td *ngFor="let col of cols; let i = index">
-            {{rowData[col.field]}}
-          </td>
-        </tr> -->
         <tr>
-          <td>
-              <p-treeTableToggler [rowNode]="rowNode" style="color: #106DB6;"></p-treeTableToggler>
-              <a style="color: #106DB6;">{{rowData.name}}</a>
-          </td>
-          <td>{{rowData.size}}</td>
-          <td>{{rowData.type}}</td>
+            <th *ngFor="let col of cols" [style]='col.style'>
+              {{col.header}}
+            </th>
         </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-list>
+          <tr>
+              <td><a (click)="detailUser(list.id)" style="color: #0160AE; cursor: pointer;">{{list.name}}</a></td>
+              <td>{{list.email}}</td>
+              <td>{{list.phone}}</td>
+              <td>{{list.organization_id}}</td>
+              <td>{{list.status}}</td>
+              <td>{{list.type_id}}</td>
+              <td style="text-align: center">
+                <img src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUnit(list.id)" style="cursor: pointer;"/>
+              </td>
+          </tr>
       </ng-template>
       <ng-template pTemplate="paginatorleft" let-state>
         <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
       </ng-template>
       <ng-template pTemplate="paginatorright" let-state>
-        {{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}
+        <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
       </ng-template> 
-    </p-treeTable>
+    </p-table>
   </div>
 </div>
-
+ 
+  
