--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -136,7 +136,7 @@
                <div>
                 <p-dropdown 
                   panelStyleClass="font"
-                  [options]="orgList" 
+                  [options]="networkList" 
                   formControlName="networkKpi" 
                   optionLabel="name" 
                   optionValue="id" 
