--- a/src/app/main/user/user.component.scss
+++ b/src/app/main/user/user.component.scss
@@ -42,57 +42,70 @@ color: #106DB6;
 }
 
 #table tr:last-child th:first-child {
-border-top-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 #table tr:last-child th:last-child {
-border-top-right-radius: 10px;
+  border-top-right-radius: 10px;
 }
 #table tr:last-child td:first-child {
-border-bottom-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 #table tr:last-child td:last-child {
-border-bottom-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 :host ::ng-deep {
-.pi-fw {
-  color:  #106DB6;
-  margin-right: 5px;
-}
+  .pi-fw {
+    color:  #106DB6;
+    margin-right: 5px;
+  }
 
-.p-paginator .p-paginator-pages .p-paginator-page{
-  color: black;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-  transition: background-color .3s;
-  border: 1px solid #ddd;
-  margin: 4px;
-  height: 26px !important;
-  width: 50px;
-  border-radius: 5px;
-  background-color: #e6e6e6;
-}
+  .p-paginator .p-paginator-pages .p-paginator-page{
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    margin: 4px;
+    height: 26px !important;
+    width: 50px;
+    border-radius: 5px;
+    background-color: #e6e6e6;
+  }
 
-.p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
-  background-color: #2199e8;
-  color: white;
-  border: 1px solid #2199e8;
-}
+  .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
+    background-color: #2199e8;
+    color: white;
+    border: 1px solid #2199e8;
+  }
 
-.p-paginator-bottom .p-ripple{
-  padding: 10px;
-  border-width: 0 !important;
-  height: 26px !important;
-  width: 50px !important;
-}
+  .p-paginator-bottom .p-ripple{
+    padding: 10px;
+    border-width: 0 !important;
+    height: 26px !important;
+    width: 50px !important;
+  }
 
-.p-datatable-table, .ng-star-inserted{
-  font-size: 13px;
-  font-family: font_lexend_deca;
+  .p-datatable-table, .p-datatable-table .ng-star-inserted, .p-paginator-pages .ng-star-inserted{
+    font-size: 13px;
+    font-family: font_lexend_deca;
+  }
+  .p-datatable .p-paginator-bottom {
+    border-width: 0;
+  }
 }
-.p-datatable .p-paginator-bottom {
-  border-width: 0;
-}
+:host ::ng-deep {
+  .p-dropdown {
+      border: 1px solid #106DB6;
+      border-radius: 5px;
+      height: 33px;
+      width: 100%;
+      outline: 0;
+      color: black !important;
+  }
+  .p-dropdown-label {
+      padding: 5px 5px 5px 15px;
+  }
 }
 
