--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -63,7 +63,7 @@
         <div>
          <p-dropdown 
          panelStyleClass="font"
-         [options]="orgList" 
+         [options]="roleList" 
          formControlName="role" 
          optionLabel="name" 
          optionValue="id" 
